# sakura-flow

./: .gitignore  README.md
backend/: pyproject.toml
backend/src/sakura_flow/: __init__.py
学习笔记/: 01-命令行与工具链.md  02-依赖锁定与项目文件.md  03-Gateway与LangGraph概念.md  04-文件格式与学习边界.md  05-根后端与harness-pyproject详解.md  README.md
教程流程/: 00-复刻目标与对照表.md  01-脚手架与仓库骨架.md  02-后端Python与UV工作区.md  03-前端Next与pnpm.md  04-配置Makefile与运行链路.md  05-技能脚本与Docker.md  README.md
