[project]
name = "sakura-flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "雅酸", email = "15675842+ya-acid@user.noreply.gitee.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
sakura-flow = "sakura_flow:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
